--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  background-color: #0d1117;
+  color: white;
+  min-height: 100vh;
+  padding: 0rem 15%;
+  /* margin: 0rem 15%; */
 }
 
 .App-logo {
